# blake3

./: .gitattributes  Cargo.toml  blake3.wasi-browser.js  blake3.wasi.cjs  blake3.wasm32-wasi.debug.wasm  blake3.wasm32-wasi.wasm  browser.js  dist.sh  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
__test__/: index.spec.ts
src/: lib.rs
