[package]
authors = ["jssite@googlegroups.com"]
edition = "2024"
name    = "blake3-napi"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
blake3      = { version = "1.8.2", features = ["pure", "wasm32_simd"] }
napi        = "3.5.2"
napi-derive = "3.3.3"
ryu         = "1.0.20"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
